<resources>
    <string name="app_name">Quelper</string>
    <!-- content description images -->
    <string name="main_content_header">background</string>
    <string name="logo">logo_telecom_tim</string>
    <string name="avatar">avatar</string>
    <!-- Menu azioni -->
    <string name="action_search">Cerca</string>
    <string name="action_reload">Aggiorna</string>
    <string name="action_settings">Impostazioni</string>
    <string name="action_logout">Logout</string>
    <!-- Menu Drawer -->
    <string name="nav_home">Prima Pagina</string>
    <string name="nav_search">Cerca</string>
    <string name="nav_favs">Favoriti</string>
    <string name="nav_notifications">Notifiche</string>
    <string name="nav_question">Le mie domande</string>
    <string name="nav_answer">Le mie risposte</string>
    <string name="nav_logout">Esci</string>
    <string name="categories_title">SFOGLIA LE CATEGORIE</string>
    <string name="cat_1">Novità</string>
    <string name="cat_2">In Evidenza</string>
    <!-- Shared preference: non utilizzare default, in modo che il processo di login sia indipendente da dati app-->
    <string name="USERINFO">it.telecomitalia.my.support.USERINFO</string>
    <string name="TELEFONO">it.telecomitalia.my.support.TELEFONO</string>
    <!-- Elementi per maschere di login -->
    <string name="btnUtente">CAMBIA</string>
    <string name="btnLogin">ENTRA</string>
    <string name="hint_user">matricola</string>
    <string name="hint_pwd">password</string>
    <string name="hint_search">Ricerco&#8230;</string>
    <!-- Errori in fase di login -->
    <string name="error1">INSERIRE MATRICOLA E PASSWORD\nDI POSTA ELETTRONICA</string>
    <string name="error2">NESSUNA CONNESSIONE DI RETE DISPONIBILE</string>
    <string name="error3">WIFI ATTIVO\nIMPOSSIBILE PROSEGUIRE</string>
    <string name="error4">APN ERRATO\nIMPOSSIBILE PROSEGUIRE</string>
    <string name="error5">PASSWORD ERRATA\nAUTENTICAZIONE FALLITA</string>
    <string name="error6">UTENTE NON ABILITATO\nALLA APPLICAZIONE</string>
    <string name="error7">ERRORE DI RETE\nSERVER NON RAGGIUNGIBILE</string>
    <string name="error8">ERRORE INTERNO AL SERVER\nDATI NON DISPONIBILI</string>
    <string name="error_button1">DISATTIVA</string>
    <string name="error_button2">MODIFICA</string>
    <!-- Snackbar messages -->
    <string name="error_refresh">Errore di connessione.\nRiprovare in seguito</string>
</resources>
