<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/nav_home"/>
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_menu_search"
            android:title="@string/nav_search"/>
        <item
            android:id="@+id/nav_favs"
            android:icon="@drawable/ic_menu_favorite"
            android:title="@string/nav_favs"/>
        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/ic_menu_notifications"
            android:title="@string/nav_notifications"/>
        <item
            android:id="@+id/nav_question"
            android:icon="@drawable/ic_menu_question"
            android:title="@string/nav_question"/>
        <item
            android:id="@+id/nav_answer"
            android:icon="@drawable/ic_menu_answer"
            android:title="@string/nav_answer"/>
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_menu_logout"
            android:title="@string/nav_logout"/>
    </group>

    <item android:title="@string/categories_title">
        <menu>
            <item
                android:id="@+id/cat_1"
                android:title="@string/cat_1"/>
            <item
                android:id="@+id/cat_2"
                android:title="@string/cat_2"/>
        </menu>
    </item>

</menu>
